// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo sc-jlRLRk kMMBEL"
    >
      <div
        class="sc-jWUzzU jYfav"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI jrnTxU sc-jlRLRk kMMBEL"
    >
      <div
        class="sc-jWUzzU eyzOyh"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-eFegNN bbTGmj sc-jlRLRk kMMBEL"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI sc-fmBCVi duIhFM iUWTNY"
      >
        <div
          class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo"
        >
          <div
            class="sc-jWUzzU jYfav"
          />
          <div
            class="sc-fKVqWL hOcWtv sc-bBHxTw fbMhcE"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-lkgTHX bhDRMC"
      >
        <div
          class="sc-gKclnd exdBHI sc-iCfMLu eWtVmG"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo sc-jlRLRk kMMBEL"
    >
      <div
        class="sc-jWUzzU jYfav"
      />
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw fbMhcE"
      >
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw kprsfI"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cGuTUx"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu dqOFRa sc-hGPBjI dIoSYo sc-jlRLRk kMMBEL"
    >
      <div
        class="sc-jWUzzU jYfav"
      />
      <div
        class="sc-fKVqWL hOcWtv sc-bBHxTw fbMhcE"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
